changed the buttons

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 
         <div id="board"></div>
         <div id="buttons">
-            <button id="left">Left</button>
-            <button id="right">Right</button>
+            <button id="left">
+          <img id="arrowLeft" src="./img/arrowtop.png" alt="" />
+        </button>
+            <button id="right">
+          <img id="arrowRight" src="./img/arrowtop.png" alt="" />
+        </button>
 
-            <button id="top">Top</button>
-            <button id="bottom">Bottom</button>
+            <button id="top"><img src="./img/arrowtop.png" alt="" /></button>
+            <button id="bottom"><img src="./img/arrowbottom.png" alt="" /></button>
         </div>
     </div>
 </body>
